# openbook-dex

assert-owner/: Cargo.toml
assert-owner/src/: lib.rs
common/: Cargo.toml
common/src/client/: rpc.rs
dex/: Anchor.toml  Cargo.toml
dex/crank/: Cargo.toml
dex/crank/src/: lib.rs
dex/fuzz/: Cargo.toml
dex/permissioned/: Cargo.toml
dex/permissioned/src/: middleware.rs  proxy.rs
dex/tests/permissioned/programs/permissioned-markets/: Cargo.toml
