[package]
name = "serum-dex-permissioned"
version = "0.5.1"
edition = "2018"

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1" }
solana-program = "2.3.0"
solana-sdk-ids = "2.2.1"
serum_dex = { path = "../", features = ["no-entrypoint"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
